Allowing messages in the READY state to also be set to PROCESSED so we can fix ET alerts.